{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 57,
  "lineage": "f709b8de-587b-1c71-4773-6702fc92e05d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_eip",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc.module.ntw-public",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc.module.ntw-private",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-b227eb7f",
            "domain": "vpc",
            "id": "eipalloc-0e825815cc3aaeb5f",
            "network_interface": "eni-06201bc28c45a5f4c",
            "private_dns": "ip-10-240-11-78.eu-west-2.compute.internal",
            "private_ip": "10.240.11.78",
            "public_dns": "ec2-35-178-150-63.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.150.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iz-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0048dae577ddb2caa",
            "owner_id": "690612908881",
            "tags": {
              "Name": "iz-dev"
            },
            "vpc_id": "vpc-05763b0a99e3a20e5"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e825815cc3aaeb5f",
            "id": "nat-0c4d7d155c065df41",
            "network_interface_id": "eni-06201bc28c45a5f4c",
            "private_ip": "10.240.11.78",
            "public_ip": "35.178.150.63",
            "subnet_id": "subnet-02b141226b8146207",
            "tags": {
              "Name": "iz-dev"
            }
          },
          "depends_on": [
            "module.ntw-public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ntw-public",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0048dae577ddb2caa",
            "id": "r-rtb-0942622e5ced363a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0942622e5ced363a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.this",
            "aws_route_table.this[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ntw-private",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d32f9e0fc3fdbe4d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0c4d7d155c065df41",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d32f9e0fc3fdbe4d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.this",
            "aws_route_table.this[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ntw-public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0942622e5ced363a1",
            "owner_id": "690612908881",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0048dae577ddb2caa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iz-dev-ntw-public"
            },
            "vpc_id": "vpc-05763b0a99e3a20e5"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.ntw-private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d32f9e0fc3fdbe4d",
            "owner_id": "690612908881",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0c4d7d155c065df41",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iz-dev-ntw-private"
            },
            "vpc_id": "vpc-05763b0a99e3a20e5"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.ntw-public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0027c87fd6bc7dc7d",
            "route_table_id": "rtb-0942622e5ced363a1",
            "subnet_id": "subnet-02b141226b8146207"
          },
          "depends_on": [
            "aws_route_table.this",
            "aws_route_table.this[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a123a52b248f00b",
            "route_table_id": "rtb-0942622e5ced363a1",
            "subnet_id": "subnet-0aaf23deb6aa9ab4e"
          },
          "depends_on": [
            "aws_route_table.this",
            "aws_route_table.this[0]"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2c6ae66a10ea5a1",
            "route_table_id": "rtb-0942622e5ced363a1",
            "subnet_id": "subnet-0054bcf5f4363d61e"
          },
          "depends_on": [
            "aws_route_table.this",
            "aws_route_table.this[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ntw-private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2df7839874ce00f",
            "route_table_id": "rtb-0d32f9e0fc3fdbe4d",
            "subnet_id": "subnet-084493f37041079ed"
          },
          "depends_on": [
            "aws_route_table.this",
            "aws_route_table.this[0]"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc8d3c51953f5249",
            "route_table_id": "rtb-0d32f9e0fc3fdbe4d",
            "subnet_id": "subnet-0a019bd0e5729fdaf"
          },
          "depends_on": [
            "aws_route_table.this",
            "aws_route_table.this[0]"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e14ba67a3f183d04",
            "route_table_id": "rtb-0d32f9e0fc3fdbe4d",
            "subnet_id": "subnet-0b4d78c16b02b611a"
          },
          "depends_on": [
            "aws_route_table.this",
            "aws_route_table.this[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ntw-public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:690612908881:subnet/subnet-02b141226b8146207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.240.11.0/24",
            "id": "subnet-02b141226b8146207",
            "map_public_ip_on_launch": true,
            "owner_id": "690612908881",
            "tags": {
              "Name": "iz-dev-ntw-public"
            },
            "vpc_id": "vpc-05763b0a99e3a20e5"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:690612908881:subnet/subnet-0aaf23deb6aa9ab4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.240.12.0/24",
            "id": "subnet-0aaf23deb6aa9ab4e",
            "map_public_ip_on_launch": true,
            "owner_id": "690612908881",
            "tags": {
              "Name": "iz-dev-ntw-public"
            },
            "vpc_id": "vpc-05763b0a99e3a20e5"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:690612908881:subnet/subnet-0054bcf5f4363d61e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.240.13.0/24",
            "id": "subnet-0054bcf5f4363d61e",
            "map_public_ip_on_launch": true,
            "owner_id": "690612908881",
            "tags": {
              "Name": "iz-dev-ntw-public"
            },
            "vpc_id": "vpc-05763b0a99e3a20e5"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.ntw-private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:690612908881:subnet/subnet-084493f37041079ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.240.21.0/24",
            "id": "subnet-084493f37041079ed",
            "map_public_ip_on_launch": false,
            "owner_id": "690612908881",
            "tags": {
              "Name": "iz-dev-ntw-private"
            },
            "vpc_id": "vpc-05763b0a99e3a20e5"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:690612908881:subnet/subnet-0a019bd0e5729fdaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.240.22.0/24",
            "id": "subnet-0a019bd0e5729fdaf",
            "map_public_ip_on_launch": false,
            "owner_id": "690612908881",
            "tags": {
              "Name": "iz-dev-ntw-private"
            },
            "vpc_id": "vpc-05763b0a99e3a20e5"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:690612908881:subnet/subnet-0b4d78c16b02b611a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.240.23.0/24",
            "id": "subnet-0b4d78c16b02b611a",
            "map_public_ip_on_launch": false,
            "owner_id": "690612908881",
            "tags": {
              "Name": "iz-dev-ntw-private"
            },
            "vpc_id": "vpc-05763b0a99e3a20e5"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:690612908881:vpc/vpc-05763b0a99e3a20e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.240.0.0/16",
            "default_network_acl_id": "acl-04396b03aeff3613f",
            "default_route_table_id": "rtb-09bf7edbe13e63293",
            "default_security_group_id": "sg-0f9aca071726d7f49",
            "dhcp_options_id": "dopt-22f1154a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05763b0a99e3a20e5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09bf7edbe13e63293",
            "owner_id": "690612908881",
            "tags": {
              "Name": "iz-dev"
            }
          }
        }
      ]
    }
  ]
}